# VRC-GoTrans

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
docs/: FINAL_STATUS.md  FIRST_RUN_WIZARD.md  HY-MT_INTEGRATION.md  I18N_LANGUAGE_SELECTION.md  LLAMA_CPP_SETUP.md  OSC_COMPLETION_SUMMARY.md  OSC_INTEGRATION.md  PROJECT_STATUS.md  TRANSLATION_COMPLETE.md  VRCT_MODEL_ANALYSIS.md
src/: App.css  App.tsx  constants.ts  i18n.ts  main.tsx  theme.tsx
src-python/: README.md  pyproject.toml
src-python/scripts/: test_hytrans.py
src-python/src/vrc_gotrans/: __main__.py  logging_setup.py  server.py
src-python/src/vrc_gotrans/translator/: local.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  downloader.rs  lib.rs  main.rs  osc.rs  paths.rs  sidecar.rs  translator.rs
src/components/: FirstRunWizard.tsx  LanguageSwitcher.tsx  ModelDownloader.tsx  OscTestPanel.tsx  SettingsPage.tsx  Sidebar.tsx  SystemInfoSection.tsx  TranslatePage.tsx  TranslatorTestPanel.tsx
src/locales/: en.ts  index.ts  ja.ts  ko.ts  zh-Hans.ts
src/services/: config.ts  osc.ts
