[project]
name = "vrc-gotrans-sidecar"
version = "0.1.0"
description = "VRC-GoTrans Python sidecar: AI translation & transcription backend"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "ChuranNeko" }]
dependencies = [
    "aiohttp>=3.10,<4",
    "llama-cpp-python>=0.3.33",
]

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vrc_gotrans"]

[tool.uv]
# Python 版本由 .python-version 锁定为 3.11（AI 库兼容性最佳）
# 镜像源在 bootstrap 时通过 UV_INDEX_URL 环境变量注入，不在此硬编码
