[package]
name = "vrc-gotrans"
version = "0.1.0"
description = "VRChat Go Translation - Real-time translation assistant for VRChat"
authors = ["ChuranNeko"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrc_gotrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rosc = "0.10"
tokio = { version = "1", features = ["full"] }
dirs = "5"
which = "6"
thiserror = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

